more css customizations. fixing wrap issue with project images.

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -170,6 +170,7 @@ textarea {
 /*---------------------------------------------------------
  2. Basic Style
 -------------------------------------------------------- */
+
 body {
   font-size: 14px;
   line-height: 24px;
@@ -253,7 +254,7 @@ hr {
   border: 0;
   width: 100%;
   height: 4px;
-  background: #dddddd;
+  background: #659dbd;
   margin-top: 40px;
   margin-bottom: 0;
 }
@@ -271,7 +272,7 @@ hr {
   height: 100%;
   position: fixed;
   background-color: #BC986A;
-  color: white;
+  color: #fbeec1;
   overflow-y: hidden;
 }
 @media screen and (max-width: 1290px) {
@@ -288,7 +289,7 @@ hr {
 .profile-image {
   width: 150px;
   height: 150px;
-  border: 4px solid white;
+  border: 4px solid #fbeec1;
   -webkit-border-radius: 75px;
   border-radius: 75px;
   overflow: hidden;
@@ -300,7 +301,7 @@ hr {
 
 h3.profile-title {
   margin-bottom: 5px;
-  color: white;
+  color: #fbeec1;
   font-size: 18px;
   font-family: 'robotobold';
 }
@@ -314,7 +315,7 @@ h3.profile-title {
 .main-navigation li a {
   padding: 15px 40px;
   display: block;
-  color: white;
+  color: #fbeec1;
   font-size: 14px;
 }
 .main-navigation li a i {
@@ -322,7 +323,7 @@ h3.profile-title {
   font-size: 24px;
 }
 .main-navigation li a:hover {
-  background: #5b6878;
+  background: #8d8741;
 }
 .main-navigation li a.active {
   background: #daad86;
@@ -340,11 +341,11 @@ h3.profile-title {
   margin-right: 20px;
 }
 .social-icons a {
-  font-size: 18px;
-  color: white;
+  font-size: 24px;
+  color: #fbeec1;
 }
 .social-icons a:hover {
-  color: #282e35;
+  color: #daad86;
 }
 
 .responsive-header {
@@ -359,7 +360,7 @@ h3.profile-title {
 }
 @media screen and (max-width: 992px) {
   .responsive-header p {
-    color: white;
+    color: #fbeec1;
   }
 }
 @media screen and (max-width: 992px) {
@@ -403,11 +404,11 @@ h3.profile-title {
   padding: 20px;
   margin-top: 30px;
   background: #6cc0f7;
-  color: white;
+  color: #fbeec1;
   font-size: 18px;
 }
 .toggle-menu:hover {
-  color: white;
+  color: #fbeec1;
 }
 
 /*---------------------------------------------------------
@@ -415,7 +416,7 @@ h3.profile-title {
 -------------------------------------------------------- */
 /*------ banner ------ */
 .banner-bg {
-  padding: 260px 80px;
+  padding: 160px 80px;
   position: relative;
   background: url("../img/topbackground.png");
   background-repeat: no-repeat;
@@ -437,16 +438,24 @@ h3.profile-title {
 .welcome-text {
   position: relative;
   z-index: 4;
+} 
+
+.welcome-text h1 { 
+  font-size: 56px;
+  font-family: 'robotobold';
+  color: #fbeec1;
+  margin-bottom: 30px;
 }
 .welcome-text h2 {
   font-size: 42px;
   font-family: 'robotobold';
-  color: white;
+  color: #fbeec1;
   margin-bottom: 30px;
 }
 .welcome-text h5 {
   font-size: 22px;
-  color: white;
+  color: #fbeec1;
+  padding-bottom: 5px;
 }
 
 /*------ about us ------ */
@@ -494,7 +503,7 @@ h3.profile-title {
   height: 100%;
   top: 40px;
   left: 0;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(101, 157, 189, 0.9);
   opacity: 0;
   visibility: 0;
   -webkit-transition: all 200ms linear;
@@ -515,10 +524,10 @@ h3.profile-title {
   margin-bottom: 15px;
 }
 .project-hover h5 a {
-  color: white;
+  color: #fbeec1;
 }
 .project-hover p {
-  color: white;
+  color: #fbeec1;
   font-size: 13px;
   line-height: 20px;
 }
@@ -541,7 +550,7 @@ h3.profile-title {
 .contact-form .button {
   width: auto;
   background: #659dbd;
-  color: white;
+  color: #fbeec1;
   text-transform: uppercase;
   border: 0;
 }
